AC 2025, CANS 2025, CSF 2025, ESORICS 2025, INDOCRYPT 2025, ISC 2025, IWSEC 2025, TCC 2025

--- a/abbrev3.bib
+++ b/abbrev3.bib
@@ -7,7 +7,7 @@
 %      Fabrice Benhamouda
 %
 %  Date:
-%      2025-12-12
+%      2026-01-26
 %
 %------------------------------------------------------------------
 
@@ -1602,15 +1602,15 @@
 @string{asiacrypt25name6 =      asiacryptname # "~2025, Part~VI"}
 @string{asiacrypt25name7 =      asiacryptname # "~2025, Part~VII"}
 @string{asiacrypt25name8 =      asiacryptname # "~2025, Part~VIII"}
-@string{asiacrypt25ed =         ""}
-@string{asiacrypt25vol1 =       ""}
-@string{asiacrypt25vol2 =       ""}
-@string{asiacrypt25vol3 =       ""}
-@string{asiacrypt25vol4 =       ""}
-@string{asiacrypt25vol5 =       ""}
-@string{asiacrypt25vol6 =       ""}
-@string{asiacrypt25vol7 =       ""}
-@string{asiacrypt25vol8 =       ""}
+@string{asiacrypt25ed =         "Goichiro Hanaoka and Bo-Yin Yang"}
+@string{asiacrypt25vol1 =       "16245"}
+@string{asiacrypt25vol2 =       "16246"}
+@string{asiacrypt25vol3 =       "16247"}
+@string{asiacrypt25vol4 =       "16248"}
+@string{asiacrypt25vol5 =       "16249"}
+@string{asiacrypt25vol6 =       "16250"}
+@string{asiacrypt25vol7 =       "16251"}
+@string{asiacrypt25vol8 =       "16252"}
 @string{asiacrypt25addr =       ""}
 @string{asiacrypt25month =      dec}
 @string{asiacrypt25pub =        springer_singapore}
@@ -1782,10 +1782,10 @@
 @string{cans25 =                "CANS25"}
 @string{cans25key =             "CANS 2025"}
 @string{cans25name =            "CANS 25" # cansname}
-@string{cans25ed =              ""}
-@string{cans25vol =             ""}
+@string{cans25ed =              "Yongdae Kim and Atsuko Miyaji and Mehdi Tibouchi"}
+@string{cans25vol =             "16351"}
 @string{cans25addr =            ""}
-@string{cans25month =           dec}
+@string{cans25month =           nov}
 @string{cans25pub =             springer_singapore}
 @string{cans26 =                "CANS26"}
 @string{cans26key =             "CANS 2026"}
@@ -3066,16 +3066,20 @@
 @string{esorics25-1 =           "ESORICS25-1"}
 @string{esorics25-2 =           "ESORICS25-2"}
 @string{esorics25-3 =           "ESORICS25-3"}
+@string{esorics25-4 =           "ESORICS25-4"}
 @string{esorics25key1 =         "ESORICS 2025, Part~I"}
 @string{esorics25key2 =         "ESORICS 2025, Part~II"}
 @string{esorics25key3 =         "ESORICS 2025, Part~III"}
+@string{esorics25key4 =         "ESORICS 2025, Part~IV"}
 @string{esorics25name1 =        "ESORICS~2025" # esoricsname # ", Part~I"}
 @string{esorics25name2 =        "ESORICS~2025" # esoricsname # ", Part~II"}
 @string{esorics25name3 =        "ESORICS~2025" # esoricsname # ", Part~III"}
-@string{esorics25ed =           ""}
-@string{esorics25vol1 =         ""}
-@string{esorics25vol2 =         ""}
-@string{esorics25vol3 =         ""}
+@string{esorics25name4 =        "ESORICS~2025" # esoricsname # ", Part~IV"}
+@string{esorics25ed =           "Vincent Nicomette and Abdelmalek Benzekri and Nora Boulahia-Cuppens and Jaideep Vaidya"}
+@string{esorics25vol1 =         "16053"}
+@string{esorics25vol2 =         "16054"}
+@string{esorics25vol3 =         "16055"}
+@string{esorics25vol4 =         "16056"}
 @string{esorics25addr =         ""}
 @string{esorics25month =        sep}
 @string{esorics25pub =          springer_cham}
@@ -6063,6 +6067,14 @@
 @string{indocrypt24addr =       ""}
 @string{indocrypt24month =      dec}
 @string{indocrypt24pub =        springer_cham}
+@string{indocrypt25 =           "INDOCRYPT25"}
+@string{indocrypt25key =        "INDOCRYPT 2025"}
+@string{indocrypt25name =       indocryptname # "~2025" # indocryptsuffix}
+@string{indocrypt25ed =         "Ratna Dutta and Luca De Feo and Sugata Gangopadhyay"}
+@string{indocrypt25vol =        "16372"}
+@string{indocrypt25addr =       ""}
+@string{indocrypt25month =      dec}
+@string{indocrypt25pub =        springer_cham}
 @string{iscname_v1 =            ""}
 @string{iscname_v2 =            ""}
 @string{isc97 =                 "ISC97"}
@@ -6285,6 +6297,14 @@
 @string{isc24addr =             ""}
 @string{isc24month =            oct}
 @string{isc24pub =              springer_cham}
+@string{isc25 =                 "ISC25"}
+@string{isc25key =              "ISC 2025"}
+@string{isc25name =             "ISC~2025" # iscname_v2}
+@string{isc25ed =               "Sang Kil Cha and Jeongeun Park"}
+@string{isc25vol =              "16186"}
+@string{isc25addr =             ""}
+@string{isc25month =            oct}
+@string{isc25pub =              springer_cham}
 @string{itcname =               ""}
 @string{itcpub =                dagstuhl}
 @string{itc20 =                 "ITC20"}
@@ -6586,7 +6606,7 @@
 @string{iwsec23addr =           ""}
 @string{iwsec23month =          aug}
 @string{iwsec23pub =            springer_cham}
-@string{iwsec24 =               "IWSEC23"}
+@string{iwsec24 =               "IWSEC24"}
 @string{iwsec24key =            "IWSEC 2024"}
 @string{iwsec24name =           "IWSEC 24" # iwsecname}
 @string{iwsec24ed =             "Kazuhiko Minematsu and Mamoru Mimura"}
@@ -6594,6 +6614,14 @@
 @string{iwsec24addr =           ""}
 @string{iwsec24month =          sep}
 @string{iwsec24pub =            springer_singapore}
+@string{iwsec25 =               "IWSEC25"}
+@string{iwsec25key =            "IWSEC 2025"}
+@string{iwsec25name =           "IWSEC 25" # iwsecname}
+@string{iwsec25ed =             "Carlos Cid and Naoto Yanai"}
+@string{iwsec25vol =            "16208"}
+@string{iwsec25addr =           ""}
+@string{iwsec25month =          nov}
+@string{iwsec25pub =            springer_singapore}
 @string{latinname =             ""}
 @string{latin92 =               "LATIN92"}
 @string{latin92key =            "LATIN 1992"}
@@ -9018,18 +9046,22 @@
 @string{tcc25-1 =               "TCC25-1"}
 @string{tcc25-2 =               "TCC25-2"}
 @string{tcc25-3 =               "TCC25-3"}
+@string{tcc25-4 =               "TCC25-4"}
 @string{tcc25key1 =             "TCC 2025, Part~I"}
 @string{tcc25key2 =             "TCC 2025, Part~II"}
 @string{tcc25key3 =             "TCC 2025, Part~III"}
+@string{tcc25key4 =             "TCC 2025, Part~IV"}
 @string{tcc25name1 =            "TCC~2025" # tccname  # ", Part~I"}
 @string{tcc25name2 =            "TCC~2025" # tccname  # ", Part~II"}
 @string{tcc25name3 =            "TCC~2025" # tccname  # ", Part~III"}
-@string{tcc25ed =               ""}
-@string{tcc25vol1 =             ""}
-@string{tcc25vol2 =             ""}
-@string{tcc25vol3 =             ""}
+@string{tcc25name4 =            "TCC~2025" # tccname  # ", Part~IV"}
+@string{tcc25ed =               "Benny Applebaum and Huijia (Rachel) Lin"}
+@string{tcc25vol1 =             "16268"}
+@string{tcc25vol2 =             "16269"}
+@string{tcc25vol3 =             "16270"}
+@string{tcc25vol4 =             "16271"}
 @string{tcc25addr =             ""}
-@string{tcc25month =            nov}
+@string{tcc25month =            dec}
 @string{tcc25pub =              springer_cham}
 @string{tches =                 "{IACR} {TCHES}"}
 @string{tchesissn =             "2569-2925"}
@@ -9888,7 +9920,7 @@
 @string{csf25name =             "CSF 2025 " # csfname}
 @string{csf25ed =               ""}
 @string{csf25addr =             ""}
-@string{csf25month =            ""}
+@string{csf25month =            jun}
 @string{csf26 =                 "CSF26"}
 @string{csf26key =              "CSF 2026"}
 @string{csf26name =             "CSF 2026 " # csfname}
