--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,6 @@
+* 2026-01-25
+AC 2025, CANS 2025, CSF 2025, ESORICS 2025, INDOCRYPT 2025, ISC 2025, IWSEC 2025, TCC 2025
+
 * 2025-12-12
 ASIACCS 2025, ACM CCS 2025, EuroS&P 2025, ICICS 2025, LATINCRYPT 2025, PROVSEC 2025, USENIX Security 2025, DCC 2025 (Numbers 1-11), JC 2025 (Numbers 1-4), JCEng 2025 (Numbers 1-4), PoPETS 2025 (Numbers 1-4), TCHES 2025 (Numbers 1-4), ToSC 2025 (Numbers 1-3)
 
