--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,6 @@
+* 2026-02-14
+CiC vol 2 (nr. 2-4)
+
 * 2026-01-25
 AC 2025, CANS 2025, CSF 2025, ESORICS 2025, INDOCRYPT 2025, ISC 2025, IWSEC 2025, TCC 2025
 
