--- a/abbrev0.bib
+++ b/abbrev0.bib
@@ -7,7 +7,7 @@
 %      Fabrice Benhamouda
 %
 %  Date:
-%      2026-01-26
+%      2026-02-17
 %
 %------------------------------------------------------------------
 
@@ -4214,8 +4214,8 @@
 @string{focs25key =             "FOCS 2025"}
 @string{focs25name =            "66th " # focsname}
 @string{focs25ed =              ""}
-@string{focs25addr =            ""}
-@string{focs25month =           oct}
+@string{focs25addr =            "Sydney, Australia"}
+@string{focs25month =           dec # "~14--17,"}
 @string{fsename =               "Fast Software Encryption -- {FSE}"}
 @string{fsepub =                springer_berlin_heidelberg}
 @string{fse93 =                 "FSE93"}
