--- a/abbrev1.bib
+++ b/abbrev1.bib
@@ -8178,8 +8178,8 @@
 @string{sac25 =                 "SAC25"}
 @string{sac25key =              "SAC 2025"}
 @string{sac25name =             "SAC 2025: 32nd " # sacname}
-@string{sac25ed =               ""}
-@string{sac25vol =              ""}
+@string{sac25ed =               "Christina Boura and Atefeh Mashatan and Ali Miri"}
+@string{sac25vol =              "16207"}
 @string{sac25addr =             ""}
 @string{sac25month =            aug}
 @string{sac25pub =              springer_cham}
