--- a/abbrev2.bib
+++ b/abbrev2.bib
@@ -8178,10 +8178,10 @@
 @string{sac25 =                 "SAC25"}
 @string{sac25key =              "SAC 2025"}
 @string{sac25name =             "SAC 2025" # sacname}
-@string{sac25ed =               ""}
-@string{sac25vol =              ""}
-@string{sac25addr =             ""}
-@string{sac25month =            aug}
+@string{sac25ed =               "Christina Boura and Atefeh Mashatan and Ali Miri"}
+@string{sac25vol =              "16207"}
+@string{sac25addr =             "Toronto, ON, Canada"}
+@string{sac25month =            aug # "~13-15,"}
 @string{sac25pub =              springer_cham}
 @string{scnname =               ""}
 @string{scn96 =                 "SCN96"}
