--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,5 @@
 * 2026-02-17
-CiC vol 2 (nr. 2-4), EPRINT 2025 (remaining entries), FOCS 2025
+CiC vol 2 (nr. 2-4), EPRINT 2025 (remaining entries), FOCS 2025, SAC 2025
 
 * 2026-01-25
 AC 2025, CANS 2025, CSF 2025, ESORICS 2025, INDOCRYPT 2025, ISC 2025, IWSEC 2025, TCC 2025
