--- a/abbrev2.bib
+++ b/abbrev2.bib
@@ -7,7 +7,7 @@
 %      Fabrice Benhamouda
 %
 %  Date:
-%      2026-02-17
+%      2026-02-18
 %
 %------------------------------------------------------------------
 
@@ -73,6 +73,7 @@
 %    IMA:            IMA
 %    INDOCRYPT:      INDOCRYPT
 %    ISC:            ISC
+%    ISTCS:          ISTCS
 %    ITC:            ITC
 %    ITCS:           ITCS
 %    IWSEC:          IWSEC
@@ -6305,6 +6306,44 @@
 @string{isc25addr =             "Seoul, South Korea"}
 @string{isc25month =            oct # "~20--22,"}
 @string{isc25pub =              springer_cham}
+@string{istcsname_v1 =          ""}
+@string{istcspub_v1 =           "IEEE Computer Society"}
+@string{istcs92 =               "ISTCS92"}
+@string{istcs92key =            "ISTCS 1992"}
+@string{istcs92name =           "ISTCS 1992" # istcsname_v1}
+@string{istcs92ed =             ""}
+@string{istcs92addr =           "Haifa, Israel"}
+@string{istcs92month =          may}
+@string{istcs92pub =            istcspub_v1}
+@string{istcs93 =               "ISTCS93"}
+@string{istcs93key =            "ISTCS 1993"}
+@string{istcs93name =           "ISTCS 1993" # istcsname_v1}
+@string{istcs93ed =             ""}
+@string{istcs93addr =           "Natanya, Israel"}
+@string{istcs93month =          jun # "~7--9,"}
+@string{istcs93pub =            istcspub_v1}
+@string{istcs95 =               "ISTCS95"}
+@string{istcs95key =            "ISTCS 1995"}
+@string{istcs95name =           "ISTCS 1995" # istcsname_v1}
+@string{istcs95ed =             ""}
+@string{istcs95addr =           "Tel Aviv, Israel"}
+@string{istcs95month =          jan # "~4--6,"}
+@string{istcs95pub =            istcspub_v1}
+@string{istcs96 =               "ISTCS96"}
+@string{istcs96key =            "ISTCS 1996"}
+@string{istcs96name =           "ISTCS 1996" # istcsname_v1}
+@string{istcs96ed =             ""}
+@string{istcs96addr =           "Jerusalem, Israel"}
+@string{istcs96month =          jun # "~10--12,"}
+@string{istcs96pub =            istcspub_v1}
+@string{istcs97 =               "ISTCS97"}
+@string{istcs97key =            "ISTCS 1997"}
+@string{istcs97name =           "ISTCS 1997" # istcsname_v1}
+@string{istcs97ed =             ""}
+@string{istcs97vol =            ""}
+@string{istcs97addr =           "Ramat-Gan, Israel"}
+@string{istcs97month =          jun # "~17--19,"}
+@string{istcs97pub =            istcspub_v1}
 @string{itcname =               ""}
 @string{itcpub =                dagstuhl}
 @string{itc20 =                 "ITC20"}
@@ -6402,7 +6441,7 @@
 @string{itcs17key =             "ITCS 2017"}
 @string{itcs17name =            "ITCS 2017" # itcsname_v4}
 @string{itcs17ed =              "Christos H. Papadimitriou"}
-@string{itcs17vol =             "4266"}
+@string{itcs17vol =             "67"}
 @string{itcs17addr =            "Berkeley, CA, USA"}
 @string{itcs17month =           jan # "~9--11,"}
 @string{itcs18 =                "ITCS18"}
